--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
-name: Build + Lint
+name: goreleaser
 
 on: push
+
+permissions:
+  contents: write
 
 jobs:
   goreleaser:
@@ -20,7 +23,7 @@ jobs:
         uses: goreleaser/goreleaser-action@v4
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          version: v1.20.0
+          version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
